--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bib Journal - Your Racing Journal</title>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDyCHrLE3vjsl0VCu16GNc8c435vqA-M0w&libraries=places"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDyCHrLE3vjsl0VCu16GNc8c435vqA-M0w&libraries=places"></script>
   </head>
   <body>
     <div id="root"></div>
